Add intitial api connectivity for home page
