# src/propositions-service/WriteFluency.Application.Contracts/Propositions/Dtos/PagedResultDto.cs
@@ -1,0 +1,13 @@
+namespace WriteFluency.Propositions;
+
+public record PagedResultDto<T>(
+    List<T> Items,
+    int TotalCount,
+    int PageNumber,
+    int PageSize
+)
+{
+    public int TotalPages => (int)Math.Ceiling(TotalCount / (double)PageSize);
+    public bool HasPrevious => PageNumber > 1;
+    public bool HasNext => PageNumber < TotalPages;
+}
